# mazelib

./: .codecov.yml  .gitignore  .travis.yml  EXAMPLES.md  LICENSE  MAZE_GEN_ALGOS.md  MAZE_SOLVE_ALGOS.md  Makefile  README.md  __init__.py  benchmarks.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yaml  coverage.yaml  ruff.yaml  stale.yaml  unittests.yaml  wheels.yaml
docs/: API.md  EXAMPLES.md  MAZE_GEN_ALGOS.md  MAZE_SIMPLIFY_ALGOS.md  MAZE_SOLVE_ALGOS.md  MAZE_TRANSMUTE_ALGOS.md
mazelib/: __init__.py  mazelib.py
mazelib/generate/: AldousBroder.pxd  AldousBroder.py  AldousBroder.pyx  BacktrackingGenerator.pxd  BacktrackingGenerator.py  BacktrackingGenerator.pyx  BinaryTree.pxd  BinaryTree.py  BinaryTree.pyx  CellularAutomaton.pxd  CellularAutomaton.py  CellularAutomaton.pyx  Division.pxd  Division.py  Division.pyx  DungeonRooms.pxd  DungeonRooms.py  DungeonRooms.pyx  Ellers.pxd  Ellers.py  Ellers.pyx  GrowingTree.pxd  GrowingTree.py  GrowingTree.pyx  HuntAndKill.pxd  HuntAndKill.py  HuntAndKill.pyx  Kruskal.pxd  Kruskal.py  Kruskal.pyx  MazeGenAlgo.pxd  MazeGenAlgo.py  MazeGenAlgo.pyx  Perturbation.pxd  Perturbation.py  Perturbation.pyx  Prims.pxd  Prims.py  Prims.pyx  Sidewinder.pxd  (+9 more)
mazelib/simplify/: CuldeSacFiller.pxd  CuldeSacFiller.py  DeadEndFiller.pxd  DeadEndFiller.py  MazeSimplifyAlgo.pxd  MazeSimplifyAlgo.py
mazelib/solve/: BacktrackerSolver.py  BacktrackingSolver.pxd  BacktrackingSolver.py  BlindAlley.pxd  BlindAlley.py  Chain.pxd  Chain.py  Collision.pxd  Collision.py  CuldeSacFiller.pxd  CuldeSacFiller.py  DeadEndFiller.pxd  DeadEndFiller.py  MazeSolveAlgo.pxd  MazeSolveAlgo.py  RandomMouse.pxd  RandomMouse.py  ShortestPath.pxd  ShortestPath.py  ShortestPaths.pxd  ShortestPaths.py  Tremaux.pxd  Tremaux.py  WallFollower.pxd  WallFollower.py  __init__.py
mazelib/transmute/: CuldeSacFiller.pxd  CuldeSacFiller.py  DeadEndFiller.pxd  DeadEndFiller.py  MazeTransmuteAlgo.pxd  MazeTransmuteAlgo.py  Perturbation.pxd  Perturbation.py  __init__.py
mazelib/utils/: MazeArray.py  MazeArray.pyx  array2d.py  array2d.pyx
src/: mazelib.py
src/generate/: AldousBroder.py  Backtrack.py  Backtracker.py  BinaryTree.py  CellularAutomaton.py  Division.py  DungeonRooms.py  Ellers.py  GenAlgo.py  GrowingTree.py  HuntAndKill.py  Kruskal.py  MazeArray.py  MazeGenAlgo.py  Prims.py  Sidewinder.py  Wilsons.py
src/solve/: CuldeSacFiller.py  DeadEndFiller.py  MazeSolveAlgo.py  RandomMouse.py  ShortestPath.py  ShortestPaths.py  SolveAlgo.py  WallFollower.py
src/utils/: MazeArray.py  array2d.py
test/: __init__.py  array_test.py  generators_test.py  maze_test.py  mazetest.py  simplifiers_test.py  solvers_test.py  test_generators.py  test_maze.py  test_solvers.py  test_transmuters.py  transmuters_test.py
